tests/lifetime/unborrow/unborrow_of_non_ref_type.err.expected
error: at 4:13: [TC-UnborrowNonReference] In function 'f', block 'entry': unborrow requires a reference-typed place, found i64
   |
 4 |             unborrow x;
   |             ^^^^^^^^^^
